timezone input alignement fix

--- a/style.css
+++ b/style.css
@@ -63,6 +63,14 @@ input {
     border-radius: 4px;
 }
 
+input.inline-time{
+    width: 93%;
+    padding: 10px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    border-radius: 4px;
+}
+
 input.inline-jsonformat-checkbox {
     width: unset;
     padding: 10px;
